# CocktailPi-MCP

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SKILL.md  docker-compose.yml  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: REFERENCE.md
src/cocktailpi_mcp/: __init__.py  cocktailpi_client.py  config.py  main.py  server.py
