[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocktailpi-mcp"
version = "0.8.0"
description = "MCP server for integrating with CocktailPi"
readme = "README.md"
license = {text = "EUPL-1.2"}
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "cairosvg>=2.7.1"
]
classifiers = [
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]

[project.scripts]
cocktailpi-mcp = "cocktailpi_mcp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
